--- a/boostCharacterizationTest/boostCharacterizationTest/boostCharacterizationTest.vcxproj
+++ b/boostCharacterizationTest/boostCharacterizationTest/boostCharacterizationTest.vcxproj
@@ -156,6 +156,7 @@
   <ItemGroup>
     <ClCompile Include="boostCharacterizationTest.cpp" />
     <ClCompile Include="stdafx.cpp" />
+    <ClCompile Include="test_BOOST_FOREACH.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
