--- a/boostCharacterizationTest/boostCharacterizationTest/boostCharacterizationTest.vcxproj.filters
+++ b/boostCharacterizationTest/boostCharacterizationTest/boostCharacterizationTest.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClCompile Include="boostCharacterizationTest.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="test_BOOST_FOREACH.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
