--- a/boostCharacterizationTest/boostCharacterizationTest/boostCharacterizationTest.vcxproj.filters
+++ b/boostCharacterizationTest/boostCharacterizationTest/boostCharacterizationTest.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClCompile Include="test_BOOST_FOREACH.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="test_string_handling.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
