gmockライブライのパスを相対パスに修正した。

--- a/boostCharacterizationTest/boostCharacterizationTest/boostCharacterizationTest.vcxproj
+++ b/boostCharacterizationTest/boostCharacterizationTest/boostCharacterizationTest.vcxproj
@@ -108,7 +108,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\kenichi\Documents\GitHub\boostCharacterizationTest\Contribute\gmock-1.7.0\msvc\2010\x64\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\..\Contribute\gmock-1.7.0\msvc\2010\x64\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>gmock.lib;gmock_main.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
