Boost Fusion Libraryにおけるタプル型のテストを追加した。
tuple

--- a/boostCharacterizationTest/boostCharacterizationTest/boostCharacterizationTest.vcxproj.filters
+++ b/boostCharacterizationTest/boostCharacterizationTest/boostCharacterizationTest.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClCompile Include="test_string_format.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="test_tuple.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
