--- a/boostCharacterizationTest/boostCharacterizationTest/boostCharacterizationTest.vcxproj
+++ b/boostCharacterizationTest/boostCharacterizationTest/boostCharacterizationTest.vcxproj
@@ -159,6 +159,7 @@
     <ClCompile Include="test_BOOST_FOREACH.cpp" />
     <ClCompile Include="test_string_format.cpp" />
     <ClCompile Include="test_string_handling.cpp" />
+    <ClCompile Include="test_tuple.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
