--- a/boostCharacterizationTest/boostCharacterizationTest/boostCharacterizationTest.vcxproj.filters
+++ b/boostCharacterizationTest/boostCharacterizationTest/boostCharacterizationTest.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClCompile Include="test_tuple.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="test_Function_Pointer.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
