--- a/boostCharacterizationTest/boostCharacterizationTest/boostCharacterizationTest.vcxproj
+++ b/boostCharacterizationTest/boostCharacterizationTest/boostCharacterizationTest.vcxproj
@@ -158,6 +158,8 @@
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="test_BOOST_FOREACH.cpp" />
     <ClCompile Include="test_Function_Pointer.cpp" />
+    <ClCompile Include="test_lambda.cpp" />
+    <ClCompile Include="test_partical_application_currying.cpp" />
     <ClCompile Include="test_string_format.cpp" />
     <ClCompile Include="test_string_handling.cpp" />
     <ClCompile Include="test_tuple.cpp" />
