--- a/boostCharacterizationTest/boostCharacterizationTest/boostCharacterizationTest.vcxproj.filters
+++ b/boostCharacterizationTest/boostCharacterizationTest/boostCharacterizationTest.vcxproj.filters
@@ -47,5 +47,11 @@
     <ClCompile Include="test_Function_Pointer.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="test_partical_application_currying.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="test_lambda.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
